# kafka_project

./: pyproject.toml
kafka-consumer/: README.md  kafka-consumer.py  messages.csv
kafka-demo/: README.md
kafka-market-project/producer/: producer.py
kafka-producer/: README.md  kafka-producer.py
