[project]
name = "kafka-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Garcia",email = "eng.gabrielgevangelista@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka (>=2.10.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "faker (>=37.3.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
